fable/test/valid/write_implied_do_4.f
      program prog
      write(6, '(3i3)') (i,i=1,5,2)
      end
