fable/test/syntax_error/bad_implied_do_1.f
      program prog
      write(6, *) (i,i=1)
      end
